--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
           service: bucket-proxy
           project_id: ax6-project
           image: gcr.io/ax6-project/bucket-proxy
-          credentials: ${{ env.GCP_SA_KEY }}
+          credentials: ${{ secrets.GCP_SA_KEY }}
